[package]
name = "yagdb"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
wasm-bindgen = "0.2.122"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
once_cell = "1.21.4"

[[bench]]
name = "performance"
harness = false
