[package]
name = "yagdb"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
wasm-bindgen = "0.2.122"
futures = "0.3"
openraft = { version = "0.9.16", optional = true, features = ["serde", "compat"] }
async-trait = { version = "0.1.89", optional = true }
openraft-memstore = { version = "0.9.16", optional = true }
reqwest = { version = "0.13.4", features = ["json"], optional = true }
tower = { version = "0.5.3", features = ["util"], optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }
env_logger = { version = "0.11.10", optional = true }
uuid = { version = "1.23.3", features = ["v4"] }
rand = "0.10.1"
dhat = "0.3.3"

[features]
cluster = ["dep:openraft", "dep:async-trait", "dep:reqwest", "dep:tower", "dep:clap", "dep:env_logger", "dep:openraft-memstore"]
dhat-heap = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
once_cell = "1.21.4"

[[bench]]
name = "performance"
harness = false
[profile.release]
debug = 1

